# muscribe

./: .gitignore  Cargo.toml  README.md  log.txt  test2.aifc  test3.aifc
examples/: pyin.rs
src/: algorithms.rs  charts.rs  cqt.rs  lib.rs  main.rs  notes.rs  samples.rs  stft.rs  yin.rs
src/algorithms/: bpm_detection.rs  onset_detection.rs  peak_picking.rs  shared.rs  yin.rs
